--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,27 +4,36 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    signingConfigs {
+        release {
+            storeFile file('C:\\Users\\Leo\\Desktop\\signature.jks')
+            storePassword '1o2t3t4f'
+            keyAlias 'key0'
+            keyPassword '1o2t3t4f'
+        }
+    }
+    compileSdk 33
+    buildToolsVersion '33.0.0'
 
     defaultConfig {
-        applicationId "com.fo.dev.quran"
+        applicationId 'com.leo.dev.quran'
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdk 32
         versionCode 1
         versionName "1.0"
+        signingConfig signingConfigs.release
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -38,13 +47,10 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
