--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fo.dev.quran">
+    package="com.leo.dev.quran">
 
     <application
-        android:allowBackup="false"
         android:icon="@drawable/ic_quran"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_quran"
-        android:supportsRtl="true"
         android:theme="@style/Theme.Quran">
+        <activity android:name="com.leo.dev.quran.MainActivity" />
         <activity
-            android:name=".MainActivity"/>
-        <activity android:name=".SplashActivity">
+            android:name="com.leo.dev.quran.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
